<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/music_name_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/music_name_psyco_image_view"
        android:scaleType="centerCrop"
        android:src="@drawable/psyco_music_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:paddingTop="5dp"
        android:id="@+id/music_name"
        style="@style/MusicNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/psyco_music_name_text_view"
        app:layout_constraintLeft_toRightOf="@id/music_name_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/music_singer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/psyco_music_singer_name"
        app:layout_constraintLeft_toRightOf="@id/music_name_image"
        app:layout_constraintTop_toBottomOf="@id/music_name" />

    <ImageView
        android:id="@+id/horizontal_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/horizontal_list_icon"
        android:src="@drawable/horizontal_dots_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>